# VK-Tech

./: .gitignore  README.md  app.py  examples_ai_analysis.py  generate_submission.py  main.py  pyproject.toml  requirements.txt  s.py  solution.py  submission.csv  submission_expert.csv  submission_hybrid.csv  test_vllm.py  train.py
data/: README_29N.txt  submission.csv  test.ipynb
data/models_weights/: metadata.joblib
data/processed/: mining_stats.json
data/reference/order_29n/processed/: order_29n_chunks.jsonl  order_29n_text.jsonl
knowledge/: __init__.py  contraindication_rules.json  factors.json  kb_schema.py  rules_raw.json  synonyms_ru.json
notebooks/: kb_validation.ipynb
scripts/: parse_29n_pdf.py  run_sanity.py  validate_kb_coverage.py
src/medhack_ai_assistant/: __init__.py  case_model.py  conclusions_parser.py  config.py  data.py  expert_pipeline.py  explanation.py  hybrid.py  kb_loader.py  kb_models.py  metrics.py  ml.py  pipeline.py  preprocessing.py  rule_engine.py  streamlit_app.py
src/medhack_ai_assistant/domain/: __init__.py  models.py
src/medhack_ai_assistant/parsing/: __init__.py  conclusions.py  order_29n.py
src/medhack_ai_assistant/services/: __init__.py  dashboard.py  document_export.py  factor_mining.py  inference.py  local_ai.py  remote_agent.py
src/medhack_ai_assistant/ui/: __init__.py  ai_rendering.py  cards.py  formatters.py  sections.py  styles.py
