[project]
name = "medhack-ai-assistant"
version = "0.1.0"
description = "AI assistant for occupational health contraindication detection"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tqdm>=4.67.0",
]
